fix: Adjusts width to 85% to fill screen on mobile (#157)
Closes: #146

--- a/src/app/show-map/show-map.component.css
+++ b/src/app/show-map/show-map.component.css
@@ -1,8 +1,13 @@
 .content {
   display: flex;
-  margin: 32px auto;
-  padding: 0 16px;
-  width: 50%;
+  margin: 32px auto ;
+  padding: auto;
+  width: 85%;
   flex-direction: column;
   align-items: center;
+}
+@media (orientation: landscape) {
+  .content {
+    width: 50%;
+  }
 }
